--- a/fr/style.css
+++ b/fr/style.css
@@ -233,8 +233,29 @@ footer a img {
 
 
 @media screen and (max-width: 480px) {
+
+    header img {
+        max-width: 350px;
+    }
+
+    .about-img {
+        max-width: 300px;
+    }
+
+    .contact-img {
+        max-width: 150px;
+    }
+
     .btn {
         margin-bottom: 20px;
+    }
+
+    .small-table {
+        display: table;
+    }
+
+    .big-table {
+        display: none;
     }
 
     .content {
@@ -244,12 +265,23 @@ footer a img {
         overflow: scroll;
     }
 
+    .courses {
+        padding-top: 40px;
+        padding-right: 40px;
+        padding-bottom: 40px;
+        padding-left: 40px;
+        display: grid;
+        grid-template-columns: 12% 16% 16% 16% 16%;
+        grid-template-rows: 10px;
+        gap: 5px;
+    }
+
     .text-main {
-        width: 70%;
-        float: left;
+        width: 90%;
+        float: none;
         background-color: white;
         justify-content: left;
-        padding: 20px;
+        padding: 15px;
     }
 
     .card {
@@ -265,6 +297,7 @@ footer a img {
 
     main {
         padding: 0px;
+        display: block;
     }
 
     nav {
@@ -275,12 +308,56 @@ footer a img {
     aside {
         padding: 10px;
         margin-top: 10px;
-        margin-bottom: 20px;
+        margin-bottom: 30px;
+        display: block;
+        float: none;
+        width: 100%;
+        margin-left: 20px;
+        max-width: 280px;
+        height: 200px;
+        overflow: scroll;
+    }
+
+    footer {
+        display: block;
+    }
+
+    table thead tr th {
+        padding: 2%;
+    }
+
+    table tbody tr td {
+        padding: 2%;
+    }
+
+    table thead tr th {
+        line-height: 1.5;
+        padding: 8px;
+        text-align: left;
+        vertical-align: bottom;
+    }
+
+    table tbody tr td {
+        border-top: 1px dashed #d9d9d8;
+        line-height: 1.5;
+        padding: 8px;
+        vertical-align: top;
+    }
+
+    table.table-hover tbody tr:hover {
+        color: #41403e;
+        color: var(--secondary);
+    }
+
+    table.table-alternating tbody tr:nth-of-type(even) {
+        color: #82807c;
     }
 
     footer a img {
         margin: 0px;
         padding-top: 0px;
+        max-height: 40px;
+        width: auto;
     }
 }
 
